Update to 1.15.1 scripts and demo data